[EWL-3976] : uses nth-child on grid-region_content class to correct vertical spacing issues when blocks are moved around

--- a/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
+++ b/styleguide/source/_patterns/03-templates/04-topic/_topic.scss
@@ -1,5 +1,10 @@
 // Set mobile order.
 .topic .grid-region {
+
+  .grid-region_content:not(:first-child){
+    @include gutter($padding-top-full...);
+  }
+
   // First column.
   &:nth-child(1n) {
     order: 2;
